# DomUnity-WebApp

./: .gitignore  .gitmodules  CI_FIXES_APPLIED.md  CI_FIXES_ROUND2.md  CI_FIXES_ROUND3.md  CI_IMPLEMENTATION.md  CI_QUICK_REFERENCE.md  CI_SETUP.md  CI_WORKFLOW_DIAGRAM.md  DEPLOYMENT.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  render.yaml  run-tests.sh  setup.bat  setup.sh  test-docker-builds.sh
.github/: PULL_REQUEST_TEMPLATE.md
MockUI/: .git.code-workspace  contacts.css  contacts.html  footer.css  header.css  index.html  login.html  loginsignup.css  offer.css  offer.html  signup.html  style.css
backend/: .env.example  Cargo.toml  Dockerfile  build.rs  test_connection.rs
backend-go/: .dockerignore  .env.example  Dockerfile  README_PROTO.md  go.mod  go.sum  integration_test.go  main.go  main_test.go  services.go
backend-nodejs/: Dockerfile  db.js  jest.config.js  package.json  server.js  services.js
backend-python/: .env.example  Dockerfile  db.py  domunity_pb2.py  domunity_pb2_grpc.py  generate_proto.sh  pyproject.toml  requirements.txt  server.py  test_integration.py  test_unit.py
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
backend/src/db/: mod.rs  pool.rs
backend/src/db/models/: contact.rs  mod.rs  offer.rs  user.rs
backend/src/services/: auth_service.rs  contact_service.rs  mod.rs  offer_service.rs
backend/src/utils/: jwt.rs  password.rs  validation.rs
frontend/: .env.example  .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  run.sh  (+1 more)
(+99 files in other folders)
