[package]
name = "domunity-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC & Protocol Buffers
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tonic-web = "0.11"
tonic-reflection = "0.11"
tonic-health = "0.11"

# HTTP & CORS
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono"] }

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"
